[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/map/florest_tiles.png" type="Texture" id=1]
[ext_resource path="res://scripts/falling_platform.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}

[sub_resource type="Animation" id=1]
resource_name = "shake"
length = 0.4
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 2 )

[node name="falling_platform" type="KinematicBody2D"]
collision_layer = 17
collision_mask = 2
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 5
frame = 34

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 4 )
anims/shake = SubResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
modulate = Color( 0.0117647, 0, 1, 1 )
position = Vector2( 0, -11 )
shape = SubResource( 2 )

[node name="area_collision" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 2

[node name="collision_shape" type="CollisionShape2D" parent="area_collision"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="timer" type="Node2D" parent="."]

[node name="timer_latency" type="Timer" parent="timer"]
one_shot = true

[connection signal="body_entered" from="area_collision" to="." method="_on_area_collision_body_entered"]
[connection signal="timeout" from="timer/timer_latency" to="." method="_on_timer_latency_timeout"]
